--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Ch. Ruthik Reddy | Data Analyst Portfolio — Luxe Motion</title>
+<title>Ch. Ruthik Reddy | Data Analyst Portfolio</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;800&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 <meta name="color-scheme" content="dark">
@@ -35,6 +35,7 @@
     background: radial-gradient(1200px 1200px at 10% 10%, #0f1533 0%, #090d1f 45%, #06080f 100%), var(--bg);
     color:var(--ink);
     overflow-x:hidden;
+    background-attachment: fixed;
   }
 
   /* Active background: aurora + particles canvas */
@@ -382,8 +383,26 @@
             </div>
           </div>
         </article>
+         <!-- Project 4 -->
+        <article class="panel card flip">
+          <div class="shine"></div>
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Healthcare claims insights Dashboard</h3>
+              <p>Interactive dashboard for 500k+ claims (denials, payer performance, TAT) with predictive models (AUC 0.82) and Snowflake‑like pipelines.</p>
+              <span class="mini">Hover/tap to flip</span>
+              <a href="https://github.com/ruthikreddych/healthcare-claims-insights-dashboard/" target="_blank" class="btn"><span class="pulse"></span>Details →</a>
+            </div>
+            <div class="flip-face flip-back">
+              <h3>Stack & Impact</h3>
+              <p>Python, SQL, Streamlit, Tableau</p>
+              <a href="https://ruthikreddych.github.io/healthcare-claims-insights-dashboard/" target="_blank" class="btn"><span class="pulse"></span>Live demo →</a>
+            </div>
+          </div>
+        </article>
 
-        <!-- Project 4 -->
+        
+        <!-- Project 5 -->
         <article class="panel card flip">
           <div class="shine"></div>
           <div class="flip-inner">
@@ -417,7 +436,7 @@
           <h4>Data Analyst — Financial Services, Charles Schwab</h4>
           <div class="sub">Chicago, IL • Jul 2024 – Present</div>
           <ul>
-            <li>12+ Power BI dashboards boosting client satisfaction by 18% in one quarter.</li>
+            <li>Developed 12+ Power BI dashboards boosting client satisfaction by 18% in one quarter.</li>
             <li>Analyzed 15M+ monthly transactions using SQL & Python, reducing churn by 6.2%.</li>
             <li>Automated data-quality checks across 7 pipelines (AWS S3/Redshift), cutting errors by 91%.</li>
             <li>ETL with dbt/Airflow at ~2 TB/week; improved regulatory reporting accuracy.</li>
@@ -436,6 +455,19 @@
           </ul>
         </div>
       </div>
+    </div>
+    <div class="parallax"></div>
+  </section>
+
+  <section id="about">
+    <div class="container reveal">
+      <h2 class="display" style="font-size: clamp(28px,4vw,44px)">Education</h2>
+       <div class="panel" style="padding:24px; margin-top:14px">
+        <p style="color:#d7dbee">Lewis University, Romeoville</p>
+        <div class="chips">
+          <span class="chip">Masters Of Data Science &thinsp;  Jan 2023 – Dec 2024</span>
+        </div>
+        </div>
     </div>
     <div class="parallax"></div>
   </section>
